--- a/MorningAlarm/app/src/main/AndroidManifest.xml
+++ b/MorningAlarm/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
             </intent-filter>
         </activity>
         <service android:name=".AlarmService"/>
+        <receiver android:name=".AlarmReceiver"/>
     </application>
 
 </manifest>
