--- a/MorningAlarm/app/src/main/AndroidManifest.xml
+++ b/MorningAlarm/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="blake.com.morningalarm">
 
     <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
